@@ -1,3 +1,6 @@
+2009-10-01  6.5.6-7 Cristy  <quetzlzacatenango@image...>
+  * Don't use group4 compression if the image is truecolor.
+
 2009-09-25  6.5.6-6 Cristy  <quetzlzacatenango@image...>
   * Permit percentage of hue for HSL (e.g. hsl(12%,...)).
 
